<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_g_login"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:stateListAnimator="@null"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="#4285F4"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="4dp"
        app:elevation="0dp"
        app:icon="@drawable/ic_google_logo"
        app:iconTint="#4285F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#4285F4"
        app:strokeColor="#4285F4"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fb_login"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:stateListAnimator="@null"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="#4267B2"
        app:cornerRadius="4dp"
        app:elevation="0dp"
        app:icon="@drawable/ic_facebook"
        app:iconTint="#FFF"
        app:layout_constraintBottom_toTopOf="@id/btn_g_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_g_login"
        app:layout_constraintStart_toStartOf="@+id/btn_g_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="#373737"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_fb_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_fb_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_fb_login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#ED6B62"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/welcome_image"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>