<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/orientation"
            android:textAppearance="@style/LargerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/explore"
            android:textAppearance="@style/LargerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_schools"
                style="@style/ExploreButtons"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                app:cardBackgroundColor="@color/main_color_red">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:drawableTop="@drawable/ic_schools"
                    android:drawablePadding="8dp"
                    android:text="@string/schools"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@android:color/white" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_jobs"
                style="@style/ExploreButtons"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                app:cardBackgroundColor="@color/main_color_green"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:drawableTop="@drawable/ic_worker"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/jobs"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@android:color/white" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_sector"
                style="@style/ExploreButtons"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                app:cardBackgroundColor="@color/main_color_orange">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:drawableTop="@drawable/ic_set_center"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/sector"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@android:color/white" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/news"
            android:textAppearance="@style/LargeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:itemCount="2"
            tools:layoutManager="GridLayoutManager"
            tools:listitem="@layout/item_news"
            tools:spanCount="2" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_after_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stateListAnimator="@null"
                android:text="@string/after_primary"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="8dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_after_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stateListAnimator="@null"
                android:text="@string/after_secondary"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="8dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />

            <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/button_after_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stateListAnimator="@null"
                android:text="@string/after_high"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="8dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />-->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>